MCA App/Release/MCA App 1/src/objects/Items_Needed__c.object
<CustomObject>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Items Needed</relationshipLabel>
        <relationshipName>Items_Needed</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <label>Requested by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Items Needed</relationshipLabel>
        <relationshipName>Items_Needed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Items Needed</label>
    <nameField>
        <label>Items Needed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items Needed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>